...
      }
    },
    "Add" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Add Field…" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Add Header" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Add Rule" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Add Variable" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Cancel" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Capture" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Case sensitive" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Choose HAR File…" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Close" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Compare flows" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Compose Request…" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Edit Note" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Edit Rule" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Flow note" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Header matcher name" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Header matcher pattern" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Header name, e.g. X-Request-ID" : {
      "localizations" : {
        "it" : {
...
      "shouldTranslate" : false
    },
    "https://example.com/api/endpoint" : {
      "shouldTranslate" : false
    },
...
      }
    },
    "Import" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Import HAR…" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Manage" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Response" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Rules" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Save" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Save Rule" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Send" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Sessions…" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Stop" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Table fields" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Tools" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Traffic Rules…" : {
      "localizations" : {
        "de" : {
...
      }
    },
    "Variable name" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Variable value" : {
      "localizations" : {
        "it" : {
...
      }
    },
    "Variables" : {
      "localizations" : {
        "it" : {
...
